--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,17 +1,5 @@
 # find gtest ...
-IF(IS_DIRECTORY "/usr/src/gtest/")
-  MESSAGE("Found google test sources in /usr/src/gtest/")
-  
-  ADD_SUBDIRECTORY(/usr/src/gtest/ gtest)
-  
-  # mimick the behaviour of find_package(GTest)
-  SET(GTEST_FOUND TRUE)
-  SET(GTEST_BOTH_LIBRARIES gtest gtest_main)
-  SET(GTEST_LIBRARIES gtest)
-  SET(GTEST_MAIN_LIBRARIES gtest_main)
-ELSE()
-  FIND_PACKAGE(GTest)
-ENDIF()
+FIND_PACKAGE(GTest REQUIRED)
 
 # build gtests if possible
 IF(GTEST_FOUND)
